#000: Pritam: Move react devtools icon to bottom-right corner to avoid overlap with sider button

--- a/src/components/spinners/globalSpinner/GlobalSpinner.css
+++ b/src/components/spinners/globalSpinner/GlobalSpinner.css
@@ -1,5 +1,5 @@
 .global-spinner {
   position: fixed;
   bottom: 0.5rem;
-  right: 0.5rem;
+  right: 3.5rem;
 }
